cmake_minimum_required( VERSION 3.17 )
project(Rovski)
set(CMAKE_BUILD_TYPE "Debug")
find_package(Vulkan REQUIRED FATAL_ERROR)
find_package(glfw3 REQUIRED FATAL_ERROR)
set(INC_DIR "include")
set(SRC_DIR "src")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++20 -stdlib=libc++")
FILE(GLOB SC_FILES "${SRC_DIR}/*.cpp" "${INC_DIR}/*.hpp")
include_directories(${INC_DIR} ${GLFW3_INCLUDE_DIR})
add_executable(${PROJECT_NAME} ${SC_FILES})
target_link_libraries(${PROJECT_NAME} glfw ${Vulkan_LIBRARIES})
